@@ -70,7 +70,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
             </plugin>
-            <!--<plugin>
+            <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
@@ -78,70 +78,11 @@
                     <warName>myDiabet</warName>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
-            </plugin>-->
 
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <recompileMode>all</recompileMode>
-                    <useZincServer>false</useZincServer>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <jvmArgs>
-                        <jvmArg>-Xms256m</jvmArg>
-                        <jvmArg>-Xmx768m</jvmArg>
-                        <jvmArg>-XX:MaxPermSize=512m</jvmArg>
-                    </jvmArgs>
-                    <javacArgs>
-                        <javacArg>-Xlint:unchecked</javacArg>
-                        <javacArg>-Xlint:deprecation</javacArg>
-                    </javacArgs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-test-compile</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
+
+
             </plugin>
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>jee6</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>war</goal>
-                        </goals>
-                        <configuration>
-                            <webappDirectory>${project.build.directory}/${project.build.finalName}-jee6
-                            </webappDirectory>
-                            <classifier>jee6</classifier>
-                            <packagingExcludes>WEB-INF/lib/javax.faces*</packagingExcludes>
-                            <warSourceExcludes>WEB-INF/lib/javax.faces*</warSourceExcludes>
 
-                            <warSourceDirectory>src/main/webapp</warSourceDirectory>
-                            <warName>myDiabet</warName>
-                            <failOnMissingWebXml>false</failOnMissingWebXml>
-                        </configuration>
-
-
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -271,8 +212,41 @@
         </dependency>
     </dependencies>
 
-   <!-- <profiles>
+    <profiles>
+        <profile>
+            <id>jee6</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <configuration>
+                            <webappDirectory>${project.build.directory}/${project.build.finalName}-jee6
+                            </webappDirectory>
+                            <classifier>jee6</classifier>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
 
+            <dependencies>
+                <dependency>
+                    <groupId>javax.faces</groupId>
+                    <artifactId>javax.faces-api</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish</groupId>
+                    <artifactId>javax.faces</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>javax.transaction</groupId>
+                    <artifactId>jta</artifactId>
+                    <version>1.1</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
         <profile>
             <id>release</id>
             <build>
@@ -361,5 +335,5 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>-->
+    </profiles>
 </project>
